tests/ui/unsafe_removed_from_name.stderr
error: removed "unsafe" from the name of `UnsafeCell` in use as `TotallySafeCell`
 --> $DIR/unsafe_removed_from_name.rs:7:1
  |
7 | use std::cell::{UnsafeCell as TotallySafeCell};
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
note: lint level defined here
 --> $DIR/unsafe_removed_from_name.rs:5:9
  |
5 | #![deny(unsafe_removed_from_name)]
  |         ^^^^^^^^^^^^^^^^^^^^^^^^

error: removed "unsafe" from the name of `UnsafeCell` in use as `TotallySafeCellAgain`
 --> $DIR/unsafe_removed_from_name.rs:9:1
  |
9 | use std::cell::UnsafeCell as TotallySafeCellAgain;
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: removed "unsafe" from the name of `Unsafe` in use as `LieAboutModSafety`
  --> $DIR/unsafe_removed_from_name.rs:23:1
   |
23 | use mod_with_some_unsafe_things::Unsafe as LieAboutModSafety;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

